Fix back/forward scroll jump issue

--- a/webclient/src/Style-light.css
+++ b/webclient/src/Style-light.css
@@ -181,6 +181,7 @@ span.source {
 }
 
 .forwardDot {
+	cursor: pointer;
 	position: fixed;
 	bottom: 1rem;
 	right: 1rem;
